--- a/idsvr-poc/Dockerfile
+++ b/idsvr-poc/Dockerfile
@@ -1,6 +1,6 @@
 FROM microsoft/aspnetcore-build:1.1 as publish
 WORKDIR /publish
-COPY idsvr-poc.csproj .
+COPY IdentityServer.csproj .
 RUN dotnet restore
 COPY . .
 RUN dotnet publish --output ./out
@@ -9,4 +9,4 @@ FROM microsoft/dotnet:1.1-runtime
 WORKDIR /dotnetapp
 COPY --from=publish /publish/out .
 ENV ASPNETCORE_URLS "http://0.0.0.0:5000/"
-ENTRYPOINT ["dotnet", "idsrv-poc.dll"]
+ENTRYPOINT ["dotnet", "IdentityServer.dll"]
