--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ services:
   - docker
 
 before_install:
-  - docker build -t mleybourne/idsrv/sinatra .
+  - docker build -t mleybourne/idsrv idsrv-poc
