--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,7 @@ services:
   - docker
 
 before_install:
+  - sudo apt-get update
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+  - docker --version
   - docker build -t mleybourne/idsrv .
