--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,7 @@ before_install:
   - sudo apt-get update
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
   - docker --version
+
+script:
   - docker build -t mleybourne/idsrv .
+  - docker run mleybourne/idsrv
