--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - sudo apt-get update
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
   - docker --version
+  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
 
 script:
   - docker build -t $DOCKER_USERNAME/idsrv .
